bug-fix: Fix carousel swipe flickering issue + Add missing default font-family to template root (#1022)
### Changelogs
- Fixed a bug where swiping carousel in mobile view displaying
flickering effect
- Added missing default font-family value to template root

--- a/src/ui/MessageTemplate/index.scss
+++ b/src/ui/MessageTemplate/index.scss
@@ -3,5 +3,6 @@
 }
 
 .sendbird-message-template__root {
- border-radius: 0;
+  border-radius: 0;
+  font-family: var(--sendbird-font-family-default);
 }
